# llm-telegram-bot

./: .gitignore  .pre-commit-config.yaml  00-vscode-workspace.code-workspace  LICENSE  README.md  issues.md  main.py  mypy.ini  pyproject.toml  pytest.ini  refactor_rename_config_loader.py  requirements.txt  run.sh  telegram_utils.py
config/: chatbot.yaml  commands.yaml  config-template.yaml  jailbreaks.yaml  models_info.json
config/chars/: char_template.yaml
config/personas/: teacher.yaml  teacher_memory.yaml  thinker.yaml
config/users/: user_template.yaml
src/: chatbot.py  config_loader.py  telegram_utils.py
src/commands/: __init__.py  commands_loader.py  commands_registry.py  parser.py
src/commands/handlers/: bot.py  bots.py  char.py  chars.py  cservice.py  defaults.py  help.py  history.py  jailbreaks.py  jb.py  jbs.py  memory.py  model.py  models.py  savelastprompt.py  savelastresponse.py  savestring.py  savethis.py  service.py  services.py  setdefaults.py  start.py  status.py  temperature.py  tokens.py  undo.py
src/llm/: dispatcher.py
src/llm_telegram_bot/: char_loader.py
src/llm_telegram_bot/commands/: commands_registry.py  parser.py
src/llm_telegram_bot/commands/handlers/: __init__.py  bot.py  bots.py  char.py  chars.py  defaults.py  help.py  history.py  jailbreaks.py  jb.py  jbs.py  memory.py  model.py  models.py  savelastprompt.py  savelastresponse.py  savestring.py  service.py  setdefaults.py  start.py  status.py  temperature.py  think.py  tokens.py  undo.py  user.py  users.py
src/llm_telegram_bot/config/: config_loader.py  persona_loader.py  schemas.py
src/llm_telegram_bot/llm/: dispatcher.py
src/llm_telegram_bot/services/: service_chutes.py  service_groq.py  service_mistral.py  services_base.py
src/llm_telegram_bot/session/: history_manager.py  poller.py  session_manager.py
src/llm_telegram_bot/telegram/: client.py  poller.py  routing.py
src/llm_telegram_bot/templates/: jinja.py
src/llm_telegram_bot/types/: character.py
src/llm_telegram_bot/utils/: escape_markdown.py  history_file.py  logger.py  message_utils.py  summarize.py  token_utils.py
src/services/: service_groq.py  service_mistral.py  services_base.py
src/session/: session_manager.py
src/telegram/: client.py  poller.py  routing.py
src/utils/: escape_html.py  markdown.py
tests/: conftest.py  test_llm_api.py  test_telegram_client.py
tests/helpers/: command_utils.py
tests/integration/: test_llm_services.py  test_telegram_client.py
tests/unit/: test_char_loader.py  test_commands.py  test_config_loader.py  test_models_info_schema.py  test_routing.py
